WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216296
Regression(
r260614
) Power usage has increased due to extra thread hopping
https://bugs.webkit.org/show_bug.cgi?id=216296
Summary
Regression(r260614) Power usage has increased due to extra thread hopping
Chris Dumez
Reported
2020-09-08 17:06:21 PDT
Power usage has increased after 260614 due to extra thread hopping.
Attachments
Patch
(10.68 KB, patch)
2020-09-08 17:11 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.83 KB, patch)
2020-09-08 17:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.78 KB, patch)
2020-09-08 17:57 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-09-08 17:06:33 PDT
<
rdar://problem/67719299
>
Chris Dumez
Comment 2
2020-09-08 17:11:20 PDT
Created
attachment 408288
[details]
Patch
Chris Dumez
Comment 3
2020-09-08 17:17:52 PDT
Created
attachment 408290
[details]
Patch
Simon Fraser (smfr)
Comment 4
2020-09-08 17:52:50 PDT
Comment on
attachment 408290
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408290&action=review
> Source/WebKit/UIProcess/mac/DisplayLink.h:68 > + static bool m_shouldSendIPCOnBackgroundQueue;
Should we use s_ for a static?
Chris Dumez
Comment 5
2020-09-08 17:57:11 PDT
Created
attachment 408297
[details]
Patch
EWS
Comment 6
2020-09-08 21:12:38 PDT
Committed
r266771
: <
https://trac.webkit.org/changeset/266771
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408297
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug